@@ -95,6 +95,8 @@ Changes in current version:
  o event_base_new_with_config() and corresponding config APIs.
  o migrate the evhttp header to event2/ but accessors are still missing.
  o deprecate timeout_* event functions by moving them to event_compat.h
+ o Move	windows gettimeofday replacement into a new evutil_gettimeofday().
+
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
